some gitpod extension updates, plus export of veg poly .shp for earth engine upload

--- a/JOTR/VegMapping/VegMapping_EDA.ipynb
+++ b/JOTR/VegMapping/VegMapping_EDA.ipynb
@@ -2,14 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import fiona\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import ListedColormap"
+    "from matplotlib.colors import ListedColormap\n",
+    "import ee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=qSmASinrJevQ6byVHYRrcdlRfzG8tKiNPUr39kp8L90&tc=IaC5zd-W--Qu4VZk7N85NBnANin8YJXQndxTtaqsZpY&cc=uzOHMn6gunwQiqhTu52TKlYJAhie3w4N1vVujBt79oo>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=qSmASinrJevQ6byVHYRrcdlRfzG8tKiNPUr39kp8L90&tc=IaC5zd-W--Qu4VZk7N85NBnANin8YJXQndxTtaqsZpY&cc=uzOHMn6gunwQiqhTu52TKlYJAhie3w4N1vVujBt79oo</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ee.Authenticate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee.Initialize()"
    ]
   },
   {
